# minimal-kf-examples

./: README.md
kf5-kxmlguiwindow/: CMakeLists.txt  kf5-kxmlguiwindowui.rc  main.cpp  window.cpp  window.hpp
